<resources>
    <string name="app_name">Eventia</string>
    <string name="config">Configuración</string>
    <string name="events">Eventos</string>
    <string name="notes">Notas</string>
    <string name="greetings_today">Hoy es </string>
    <string name="deletenote">Borrar nota</string>
    <string name="reminder_opt">Recordatorio</string>
    <string name="textInputLayout">Título del recordatorio</string>
    <string name="textView">Notificar cada</string>
    <string name="editTextNumber">num</string>
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="conpass">Confirme contraseña</string>
    <string name="email">Correo</string>
    <string name="login">Iniciar sesión</string>
    <string name="signup">Registrarse</string>
    <string name="signupText">¿No tienes cuenta?</string>
    <string name="rememberme">Recuerdame</string>
    <string name="remembered">Recordado</string>
    <string name="noregistered">Usuario no registrado, por favor, registrese</string>
    <string name="registered">Usuario ya registrado, por favor, introduzca un Usuario distinto</string>
    <string name="loginNoText">Por favor, introduzca Usuario y Contraseña</string>
    <string name="passdontmatch">La contraseñas no coincide</string>
    <string name="exit">Salir</string>
    <string name="save">Guardar</string>
    <string name="title">Título</string>
    <string name="note">Nota</string>
    <string name="savednote">Nota guardada</string>
    <string name="savenoteerror">La nota debe tener un título para guardarse</string>
    <string name="deletednote">Nota eliminada</string>
    <string name="emaildoesntmatch">El email no coincide con el formato example@example.com</string>
    <string name="accountnotcreated">La cuenta no se ha podido crear, revise los datos introducidos</string>
    <string name="accountnotfound">La cuenta no se ha encontrado.\nPor favor, revise correo y contraseña</string>
    <string name="userregistered">Usuario registrado en la app</string>
    <string name="registererror">Error de registro</string>
    <string name="friends">Amigos</string>
    <string name="friendrequests">Peticiones de amistad</string>
    <string name="accept">Aceptar</string>
    <string name="reject">Denegar</string>
    <string name="search">Buscar</string>
    <string name="sendrequest">Enviar petición</string>
    <string name="findFriend">Encontrar amigos</string>
    <string name="nodataload">No se han podido cargar datos</string>
    <string name="friendaccepted">Amigo aceptado</string>
    <string name="requestrejected">Petición de amistad rechazada</string>
    <string name="accepterror">Error al aceptar amigo</string>
    <string name="rejecterror">Error al rechazar la petición</string>
    <string name="usernonselected">No se ha elegido un usuario</string>
    <string name="usernotfound">No se han encontrado usuarios</string>
    <string name="alreadyfriends">Ya sois amigos</string>
    <string name="alreadysent">Ya has enviado una solicitud de amistad</string>
    <string name="requestsent">Solicitud de amistad enviada</string>
    <string name="requestsenderror">Error al enviar la solicitud</string>
    <string name="requestcheckerror">Error al comprobar la solicitud existente</string>
    <string name="alreadycheckerror">Error al comprobar si ya sois amigos</string>
    <string name="ownfrienderror">No puedes ser tu propio amigo</string>
    <string name="couldnotload">No se han podido cargar amigos</string>
    <string name="changeimage">Cambiar imagen de perfil</string>
    <string name="permissiondenied">Permiso denegado</string>
    <string name="userid">Id de usuario</string>
    <string name="uploadsuccess">Se ha subido el fichero satisfactoriamente</string>
    <string name="uploadfailed">La subida ha fallado: </string>
    <string name="imagenotselected">No se ha seleccionado imagen</string>
    <string name="updatedprofile">Perfil actualizado</string>
    <string name="updateprofileerror">No se ha podido actualizar el perfil</string>
    <string name="logout">Cerrar\nsesión</string>
    <string name="viewevents">Mirar eventos</string>
    <string name="deletefriend">Eliminar amigo</string>
    <string name="deletefriendquestion">¿Estás seguro de que quieres eliminar este amigo?</string>
    <string name="frienddeleted">Amigo elminado</string>
    <string name="frienddeletederror">Error al eliminar amigo</string>
    <string name="delete">Borrar</string>
    <string name="eventloaderror">Error al cargar los eventos</string>
    <string name="newevent">Nuevo Evento</string>
    <string name="nextevents">Próximos Eventos</string>
    <string name="eventname">Nombre del evento</string>
    <string name="eventdate">Fecha del evento</string>
    <string name="eventplace">Lugar del evento</string>
    <string name="eventimage">Imagen del evento</string>
    <string name="eventhour">Hora del evento</string>
    <string name="createevent">Crear evento</string>
    <string name="completefields">Complete todos los campos para crear el evento</string>
    <string name="eventcreated">Evento creado y usuario registrado</string>
    <string name="createeventerror">Error al crear evento</string>
    <string name="loadeventserror">Error al cargar eventos</string>
    <string name="invitefriends">Invitar amigos</string>
    <string name="invite">Invitar</string>
    <string name="eventrequests">Invitaciones a eventos</string>
    <string name="eventsignup">Te has unido al evento</string>
    <string name="eventdeclined">Invitación al evento rechazada</string>
    <string name="alreadyinvited">Este amigo ya ha sido invitado al evento</string>
    <string name="alreadyregistered">El usuario ya está registrado en el evento</string>
    <string name="eventrequestsent">Enviada petición del evento: </string>
    <string name="registereddelete">Has salido del evento</string>
    <string name="leaveeventquestion">¿Estas seguro de que quieres salirte del evento?</string>
    <string name="leave">Salir</string>
    <string name="registereddeleteerror">No has podido salir del evento</string>
    <string name="eventdeleted">Evento eliminado</string>
    <string name="eventdeletederror">Error al eliminar el evento</string>
    <string name="pastevents">Eventos\nprevios</string>
    <string name="eventedited">Evento editado</string>
    <string name="eventediterror">No se ha podido editar el evento</string>
    <string name="removeuserfromevent">Eliminar del evento</string>
    <string name="userremovedfromevent">El usuario ha sido eliminado del evento</string>
    <string name="promotetoadmin">Hacer administrador</string>
    <string name="userpromotedtoadmin">El usuario ahora es administrador</string>
    <string name="alreadyadmin">El usuario ya es administrador</string>
    <string name="eventedit">Editar evento</string>
    <string name="savechanges">Guardar cambios</string>
    <string name="usernameshort">El nombre de usuario debe tener al menos tres letras</string>
    <string name="registeredusers">Participantes del evento</string>
    <string name="notificationpermissionslack">Eventia no tiene permisos para enviar notificaciones en tu dispositivo, limitando así la funcionalidad de la aplicación.</string>
    <string name="notificationpermissionsgranted">Permisos de notificación concedidos</string>
    <string name="notificationpermissionsdenied">Permisos de notificación denegados</string>
    <string name="btn_openconfiguration">Ir a configuración</string>
    <string name="btn_skip">Saltar por ahora</string>
    <string name="event_notificationtitle_now">Tu evento: %1$s está teniendo lugar ahora a las %2$s!</string>
    <string name="event_notificationtitle_1h">Tu evento: %1$s tendrá lugar dentro de una hora!</string>
    <string name="event_notificationtitle_24h">Tu evento: %1$s tendrá lugar dentro de 24h!</string>
    <string name="event_notificationtitle_7d">Tu evento: %1$s tendrá lugar dentro de 7 días!</string>
    <string name="event_notificationmessage">Ubicación: %1$s</string>
    <string name="event_notificationchannel">Notificaciones de eventos</string>
    <string name="nopreviousevents">No existen eventos previos</string>
    <string name="nocurrentevents">Agenda despejada!</string>
    <string name="addfriends">Agrega a un amigo!</string>
    <string name="nopendingrequests">No hay peticiones pendientes</string>
    <string name="addnotes">Añade una nota!</string>

    <string-array name="array_config">
        <item name="colors">Colores</item>
    </string-array>

    <string-array name="spinnerItems_1">
        <item>Tipo de evento</item>
        <item>Recordatorio</item>
        <item>Cita</item>
        <item>Cumpleaños</item>
    </string-array>

    <string-array name="spinnerItems_2">
        <item>minutos</item>
        <item>horas</item>
        <item>días</item>
        <item>semanas</item>
        <item>meses</item>
        <item>años</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="material_calendar_monday">Lun</string>
    <string name="material_calendar_tuesday">Mar</string>
    <string name="material_calendar_wednesday">Mie</string>
    <string name="material_calendar_thursday">Jue</string>
    <string name="material_calendar_friday">Vie</string>
    <string name="material_calendar_saturday">Sab</string>
    <string name="material_calendar_sunday">Dom</string>

    <array name="material_calendar_months_array">
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </array>

    <string name="material_calendar_today_button">Hoy</string>
    <string name="material_calendar_positive_button">OK</string>
    <string name="material_calendar_negative_button">Cancelar</string>
</resources>