<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".authentication.LoginActivity">

    <ImageView android:id="@+id/iv_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="25dp"
        android:src="@drawable/logo_eventia"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:text="@string/app_name"
        android:textColor="#1a2b63"
        android:textSize="38sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/gabriela"
        android:text="@string/login"
        android:textColor="#FCB343"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/et_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_appname" />
    
    <EditText android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/et_login_bckgrnd"
        android:hint="@string/email"
        android:textColorHint="@android:color/darker_gray"
        android:autofillHints="username"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/gabriela"
        android:textColor="@color/white"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login"/>

    <EditText android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/et_login_bckgrnd"
        android:hint="@string/password"
        android:textColorHint="@android:color/darker_gray"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:fontFamily="@font/gabriela"
        android:textColor="@color/white"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email"/>

    <Button android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/btn_login_bckgrnd"
        android:text="@string/login"
        android:fontFamily="@font/aclonica"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ToggleButton
        android:id="@+id/tgb_rememberme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        app:layout_constraintBottom_toTopOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="@id/et_password"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/aclonica"
        android:textStyle="bold"
        android:paddingHorizontal="15dp"
        android:textOn="@string/remembered"
        android:textOff="@string/rememberme"
        android:textColor="@color/black"
        android:background="@drawable/rememberme_bckgrnd_selector"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView android:id="@+id/tv_signup_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gabriela"
            android:text="@string/signupText"/>

        <TextView android:id="@+id/tv_signup_txtBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:textColor="#FF6201"
            android:fontFamily="@font/gabriela"
            android:text="@string/signup"/>

    </LinearLayout>
    


</androidx.constraintlayout.widget.ConstraintLayout>