<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:src="@drawable/ic_notification_rationale"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:text="@string/notificationpermissionslack"
        android:textAlignment="center"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/btnAjustes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_openconfiguration"
        android:layout_below="@id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:backgroundTint="#ffeca1"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_skip"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="10dp"
        android:textSize="15sp"/>


</RelativeLayout>