<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/friends_seracher_background"
    tools:context=".FriendSearcherActivity">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_searcher"
        android:orientation="horizontal"
        android:layout_height="48dp"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#CC9933">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:fontFamily="sans-serif-black"
            android:text="@string/app_name"
            android:textSize="25sp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView android:id="@+id/tv_friendSearcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cl_searcher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingHorizontal="20dp"
        android:text="@string/findFriend"
        android:background="#CF000000"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/gabriela"
        android:textColor="@android:color/holo_purple"
        android:textSize="30sp"/>

    <EditText android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/tv_friendSearcher"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="10dp"
        android:hint="@string/username"
        android:textColorHint="@android:color/holo_orange_dark"
        android:textColor="@android:color/holo_orange_dark"
        android:fontFamily="@font/aclonica"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:background="@drawable/et_login_bckgrnd"
        android:inputType="text"/>

    <Button android:id="@+id/btn_search"
        app:layout_constraintTop_toBottomOf="@id/et_username"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_login_bckgrnd"
        android:fontFamily="@font/gabriela"
        android:text="@string/search" />

    <androidx.recyclerview.widget.RecyclerView android:id="@+id/rv_users"
        app:layout_constraintTop_toBottomOf="@id/btn_search"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="#A0000000"/>

    <Button android:id="@+id/btn_sendRequest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="@drawable/btn_save_bckgrnd"
        android:text="@string/sendrequest"
        android:fontFamily="@font/aclonica"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>