<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".authentication.SignupActivity">

    <ImageView android:id="@+id/iv_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="25dp"
        android:src="@drawable/logo_eventia"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:text="@string/app_name"
        android:textColor="#1a2b63"
        android:textSize="38sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"/>

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gabriela"
        android:text="@string/signup"
        android:textColor="#FCB343"
        android:textSize="38sp"
        android:textStyle="bold"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_appname"
        app:layout_constraintBottom_toTopOf="@id/et_username"/>

    <EditText android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/et_login_bckgrnd"
        android:hint="@string/username"
        android:textColorHint="@android:color/darker_gray"
        android:autofillHints="username"
        android:inputType="text"
        android:fontFamily="@font/gabriela"
        android:textColor="@color/white"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login"/>

    <EditText android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/et_login_bckgrnd"
        android:hint="@string/email"
        android:textColorHint="@android:color/darker_gray"
        android:autofillHints="username"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/gabriela"
        android:textColor="@color/white"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_username"/>

    <EditText android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/et_login_bckgrnd"
        android:hint="@string/password"
        android:textColorHint="@android:color/darker_gray"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:fontFamily="@font/gabriela"
        android:textColor="@color/white"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email"/>

    <EditText android:id="@+id/et_confirm_pass"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/et_login_bckgrnd"
        android:hint="@string/conpass"
        android:textColorHint="@android:color/darker_gray"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:fontFamily="@font/gabriela"
        android:textColor="@color/white"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password"/>

    <Button android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/btn_login_bckgrnd"
        android:text="@string/signup"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="@font/aclonica"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_confirm_pass"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>