<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/day_bckgrnd"
    tools:context=".event.EventCreationActivity">

    <TextView android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginVertical="15dp"
        android:text="@string/newevent"
        android:textColor="@color/black"
        android:fontFamily="@font/gabriela"
        android:textSize="30sp"/>

    <ImageView android:id="@+id/iv_event_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginVertical="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_event_list"
        android:contentDescription="@string/app_name"/>

    <TextView android:id="@+id/tv_event_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_event_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/et_event_name"
        android:paddingVertical="5dp"
        android:paddingHorizontal="15dp"
        android:background="#C28B00"
        android:layout_marginTop="25dp"
        android:text="@string/eventname"
        android:textColor="@color/black"
        android:fontFamily="@font/gabriela"
        android:textSize="20sp"/>

    <EditText android:id="@+id/et_event_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_event_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_event_place"
        android:background="#EFBF45"
        android:paddingVertical="5dp"
        android:paddingHorizontal="15dp"
        android:layout_marginHorizontal="15dp"
        android:hint="@string/eventname"
        android:autofillHints=""
        android:inputType="text"
        android:textColorHint="@android:color/darker_gray"
        android:fontFamily="@font/aclonica"
        android:textSize="15sp"
        android:textAlignment="center"/>

    <TextView android:id="@+id/tv_event_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_event_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/et_event_place"
        android:paddingVertical="5dp"
        android:paddingHorizontal="15dp"
        android:background="#C28B00"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="15dp"
        android:text="@string/eventplace"
        android:textColor="@color/black"
        android:fontFamily="@font/gabriela"
        android:textSize="20sp"/>

    <EditText android:id="@+id/et_event_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_event_place"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_event_date_title"
        android:background="#EFBF45"
        android:paddingVertical="5dp"
        android:paddingHorizontal="15dp"
        android:layout_marginHorizontal="15dp"
        android:hint="@string/eventplace"
        android:autofillHints=""
        android:inputType="text"
        android:textColorHint="@android:color/darker_gray"
        android:fontFamily="@font/aclonica"
        android:textSize="15sp"
        android:textAlignment="center"/>

    <TextView android:id="@+id/tv_event_date_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_event_place"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_event_date"
        android:paddingVertical="5dp"
        android:paddingHorizontal="15dp"
        android:background="#C28B00"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="15dp"
        android:text="@string/eventdate"
        android:textColor="@color/black"
        android:fontFamily="@font/gabriela"
        android:textSize="20sp"/>

    <TextView android:id="@+id/tv_event_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_event_date_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_event_hour_title"
        android:background="#EFBF45"
        android:paddingVertical="5dp"
        android:paddingHorizontal="15dp"
        android:text="@string/eventdate"
        android:fontFamily="@font/aclonica"
        android:textSize="15sp"
        android:textAlignment="center"/>

    <TextView android:id="@+id/tv_event_hour_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_event_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_event_hour"
        android:paddingVertical="5dp"
        android:paddingHorizontal="15dp"
        android:background="#C28B00"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="15dp"
        android:text="@string/eventhour"
        android:textColor="@color/black"
        android:fontFamily="@font/gabriela"
        android:textSize="20sp"/>

    <TextView android:id="@+id/tv_event_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_event_hour_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_create_event"
        android:background="#EFBF45"
        android:paddingVertical="5dp"
        android:paddingHorizontal="15dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="25dp"
        android:hint="@string/eventhour"
        android:autofillHints=""
        android:textColorHint="@android:color/darker_gray"
        android:fontFamily="@font/aclonica"
        android:textSize="13sp"
        android:textAlignment="center"/>

    <Button android:id="@+id/btn_create_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/createevent"
        android:fontFamily="@font/aclonica"
        android:textSize="15sp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:background="@drawable/btn_login_bckgrnd"/>

</androidx.constraintlayout.widget.ConstraintLayout>